// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorScreen with errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 120,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "fontFamily": "RedHatDisplayBold",
          "fontSize": 24,
          "lineHeight": 32,
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        {
          "fontFamily": "RedHatDisplayBold",
          "fontSize": 20,
          "lineHeight": 28,
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        {
          "backgroundColor": "#F8F9F9",
          "borderRadius": 25,
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 12,
          "lineHeight": 24,
          "padding": 15,
        }
      }
    >
      Déjà vu
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
      }
    }
  >
    <View
      pointerEvents="box-none"
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "borderRadius": 15,
              "flexGrow": 1,
              "width": "100%",
            },
            {},
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2F4ACD",
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": 1,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  },
                  undefined,
                ]
              }
              testID="ErrorContinueButton"
            >
              <View
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <BVLinearGradient
                  borderRadii={
                    [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ]
                  }
                  colors={
                    [
                      -13677875,
                      -15194777,
                    ]
                  }
                  endPoint={
                    [
                      1,
                      0,
                    ]
                  }
                  locations={null}
                  startPoint={
                    [
                      0,
                      0,
                    ]
                  }
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Text
                maxFontSizeMultiplier={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "RedHatDisplaySemiBold",
                    "fontSize": 12,
                    "fontWeight": "normal",
                    "lineHeight": 24,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
              >
                restartApp
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ErrorScreen without errorMessage renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "height": 1292,
      "justifyContent": "space-between",
      "paddingBottom": 30,
      "paddingHorizontal": 20,
      "paddingTop": 55,
      "width": 750,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "height": 120,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "fontFamily": "RedHatDisplayBold",
          "fontSize": 24,
          "lineHeight": 32,
        }
      }
    >
      oops
    </Text>
    <Text
      style={
        {
          "fontFamily": "RedHatDisplayBold",
          "fontSize": 20,
          "lineHeight": 28,
        }
      }
    >
      somethingWrong
    </Text>
  </View>
  <View>
    <Text
      ellipsizeMode="tail"
      numberOfLines={10}
      style={
        {
          "backgroundColor": "#F8F9F9",
          "borderRadius": 25,
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 12,
          "lineHeight": 24,
          "padding": 15,
        }
      }
    >
      unknown
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
      }
    }
  >
    <View
      pointerEvents="box-none"
    >
      <View
        pointerEvents="box-none"
        style={
          [
            {
              "borderRadius": 15,
              "flexGrow": 1,
              "width": "100%",
            },
            {},
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 100,
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                {
                  "attribute": "selectableItemBackground",
                  "rippleRadius": undefined,
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2F4ACD",
                    "flexDirection": "row",
                    "height": 48,
                    "justifyContent": "center",
                    "minWidth": 120,
                    "opacity": 1,
                    "paddingHorizontal": 24,
                    "paddingVertical": 5,
                  },
                  undefined,
                ]
              }
              testID="ErrorContinueButton"
            >
              <View
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <BVLinearGradient
                  borderRadii={
                    [
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                      0,
                    ]
                  }
                  colors={
                    [
                      -13677875,
                      -15194777,
                    ]
                  }
                  endPoint={
                    [
                      1,
                      0,
                    ]
                  }
                  locations={null}
                  startPoint={
                    [
                      0,
                      0,
                    ]
                  }
                  style={
                    {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                />
              </View>
              <Text
                maxFontSizeMultiplier={1}
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "RedHatDisplaySemiBold",
                    "fontSize": 12,
                    "fontWeight": "normal",
                    "lineHeight": 24,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
              >
                restartApp
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
